# make_opcodes

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/test/: 1.txt
